<resources>
    <string name="app_name">四大组件</string>

    <!--StartAvtivity-->
    <string name="action_study_activity">activity 学习</string>
    <string name="action_study_service">service 学习</string>
    <string name="action_study_broadcast">broadCast 学习</string>
    <string name="action_study_content_provider">contentProvider 学习</string>

    <!--text-->
    <string name="home_text">HOME</string>
    <string name="welcome_text">welcome to our wonderful Activity learning tour</string>

    <!--activity toolbar-->
    <string name="main_toolbar_title">首页</string>
    <string name="start_tool_bar">启动页</string>
    <string name="dialog_tool_bar">对话框活动</string>

    <!--Service-->
    <string name="service_bind">bind</string>
    <string name="service_unbind">unbind</string>
    <string name="get_pic_from_bind">通过服务获得图片</string>
    <string name="intent_service">intentService</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
