<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <include layout="@layout/tools_toolbar"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:layout_margin="5sp"
        app:cardCornerRadius="25dp">

        <TextView
            android:id="@+id/study_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/riple_bac"
            android:clickable="true"
            android:text="@string/action_study_activity"
            android:textColor="@color/toolbar_white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:layout_margin="5sp"
        app:cardCornerRadius="25dp">

        <TextView
            android:id="@+id/study_service"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/riple_bac"
            android:clickable="true"
            android:text="@string/action_study_service"
            android:textColor="@color/toolbar_white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:layout_margin="5sp"
        app:cardCornerRadius="25dp">

        <TextView
            android:id="@+id/study_broadcast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/riple_bac"
            android:clickable="true"
            android:text="@string/action_study_broadcast"
            android:textColor="@color/toolbar_white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:layout_margin="5sp"
        app:cardCornerRadius="25dp">

        <TextView
            android:id="@+id/study_content_provider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/riple_bac"
            android:clickable="true"
            android:text="@string/action_study_content_provider"
            android:textColor="@color/toolbar_white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>
